--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: 'Wisdom Script';
+  font-family: WisdomScriptAJ;
   src: url("../fonts/Wisdom Script AJ.eot");
   src: local("☺"), url("../fonts/Wisdom Script AJ.woff") format("woff"), url("../fonts/Wisdom Script AJ.ttf") format("truetype"), url("../fonts/Wisdom Script AJ.svg") format("svg");
   font-weight: normal;
@@ -107,6 +107,10 @@ h6 {
 }
 
 /*--------------------*/
+
+body {
+  overflow-x: hidden;
+}
 
 .container {
   max-width: 970px;
@@ -297,12 +301,6 @@ header .container .header__top-line .row .header__logo {
   -webkit-transition: all 0.5s ease 0.3s;
   -o-transition: all 0.5s ease 0.3s;
   transition: all 0.5s ease 0.3s;
-}
-
-header .container .header__top-line .row .header__logo a {
-  font-family: 'Wisdom Script', sans-serif;
-  font-size: 26px;
-  color: #fed136;
 }
 
 header .container .header__content {
